<resources>
    <string name="app_name">Meus Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Marcos Fellipe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>
    <string name="modelo_fragment">Cliente VIP DEMO</string>
    <string name="fragmento_preto">Fragmento Preto</string>
    <string name="fragmento_adicionar_cliente">Adicionar Cliente</string>
    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="fragmento_azul">Fragmento Azul</string>
    <string name="perfil">Perfil</string>
    <string name="todo">TODO</string>

    <!--Textos para o layout Adicionar Novo Cliente-->
    <string name="novoCliente">Adicionar Novo Cliente</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Numero</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="termosdeuso">Termo de Uso</string>

</resources>